--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
 <body>
     <h2>HOME PAGE</h2>
 
-    <a href="{% url 'index' %}">BACK</a>
+    <a href="{% url 'index' %}">Logout</a>
+    
 </body>
 </html>
