--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    {% if page == 'login' %}
     <div>
         <form method="POST" action="">
             {% csrf_token %}
@@ -18,7 +19,26 @@
             <input type="submit" value="Login">
 
         </form>
+        <p>Haven't signed up yet?</p>
+        <a href="{% url 'register' %}">Sign Up</a>
     </div>
+
+    {% else %}
+    <div>
+        <form method="POST" action="">
+            {% csrf_token %}
+            {{form.as_p}}
+            
+
+            <input type="submit" value="Register">
+
+        </form>
+
+        <p>Already signed up?</p>
+        <a href="{% url 'login' %}">Log In</a>
+        
+    </div>
+    {% endif %}
 
     {% if messages %}
 <ul class="messages">
